--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Samsung Calcluator"
+rootProject.name = "Samsung Calculator"
 include ':app'
