setting up with databinding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    alias(libs.plugins.androidApplication)
+    alias(libs.plugins.jetbrainsKotlinAndroid)
+    id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 33
+    namespace 'com.kimikevin.oneuicalculator'
+    compileSdk 34
 
     defaultConfig {
-        applicationId "com.codelab.samsungcalculator"
-        minSdk 28
-        targetSdk 33
+        applicationId "com.kimikevin.oneuicalculator"
+        minSdk 30
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -23,27 +25,27 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
 
     buildFeatures {
-        viewBinding true
+        dataBinding true
     }
-    namespace 'com.codelab.samsungcalculator'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.core:core-splashscreen:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation libs.androidx.core.ktx
+    kapt libs.compiler
+    implementation libs.androidx.appcompat
+    implementation libs.material
+    implementation libs.androidx.activity
+    implementation libs.androidx.constraintlayout
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.junit
+    androidTestImplementation libs.androidx.espresso.core
 }
