--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     alias(libs.plugins.androidApplication)
     alias(libs.plugins.jetbrainsKotlinAndroid)
-    id 'kotlin-kapt'
+    id ('kotlin-kapt')
 }
 
 android {
@@ -33,6 +33,7 @@ android {
     }
 
     buildFeatures {
+        viewBinding = true
         dataBinding true
     }
 }
